--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -582,6 +582,7 @@ admin.stockReceiver.saveStockReceiverVendorOrder=Save Stock Receiver
 admin.stockreceiver=Stock Receiver
 admin.stockreceiver.create=Receive Items
 admin.stockreceiver.createStockReceiver=Create Stock Receiver
+admin.stockreceiver.deliverFromLocation=Deliver From Location
 admin.stockreceiver.receiveForLocation=Receive For Location
 admin.stockreceiver.selectReceiveForLocation=Select
 admin.stockreceiver.typeName_order=Return Order
