Working on Inventory and skuCache entity / service

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -598,11 +598,10 @@ admin.vendor.delete_success=The vendor was successfully deleted.
 admin.vendor.deletevendor_disabled=Vendor can not be deleted because it is in use by a Vendor Order
 admin.vendor.deletevendoraddress_confirm=Are you sure that you would like to delete this vendor address?
 admin.vendor.detail.tab.vendorOrders=Orders
-admin.vendor.detailVendor=Vendor Detail
-admin.vendor.detailVendor.tab.vendorOrders=VendorOrders
-admin.vendor.detail.tab.vendorOrders=Orders
 admin.vendor.detail.tab.vendorOrders.noBrands=There are currently no brands assigned to this vendor, therefore you currently cannot create vendor orders.
 admin.vendor.detail.tab.vendorOrders.noOrders=There are currently no orders for this vendor.
+admin.vendor.detailVendor=Vendor Detail
+admin.vendor.detailVendor.tab.vendorOrders=VendorOrders
 admin.vendor.editVendor=Edit Vendor
 admin.vendor.listVendors=List Vendors
 admin.vendor.listVendors_hint=The Vendor Listing shows a grid of all vendors in the system.
@@ -618,14 +617,14 @@ admin.vendorOrder.detail=Vendor Order Detail
 admin.vendorOrder.detail.basicvendorOrderinfo=Basic Vendor Order Info
 admin.vendorOrder.detail.disabledReceive=You cannot receive items on this order as no items have been added.
 admin.vendorOrder.detail.subtotal=Subtotal
+admin.vendorOrder.detail.tab.items.noItems=There are currently no items ordered on this vendor order. To add items, click on the "Products from Vendor" tab and add products from that vendor.
+admin.vendorOrder.detail.tab.products.noProducts=There are no products offered by this vendor. Only products of a brand being offered by this vendor will be displayed. Edit the vendor and change the brands that they offer, or add products to already offered brands.
 admin.vendorOrder.detail.tab.stockReceiverVendorOrders=Receivers
+admin.vendorOrder.detail.tab.stockReceivers.noStockReceivers=There are currently no stock receivers. To receive stock, create a vendor order and use the "Receive Items" button.
 admin.vendorOrder.detail.tab.vendorOrderItems=Ordered Items
 admin.vendorOrder.detail.tab.vendorOrderProducts=Products from Vendor
 admin.vendorOrder.detail.total=Total
 admin.vendorOrder.detail.totaltax=Total Tax
-admin.vendorOrder.detail.tab.stockReceivers.noStockReceivers=There are currently no stock receivers. To receive stock, create a vendor order and use the "Receive Items" button.
-admin.vendorOrder.detail.tab.products.noProducts=There are no products offered by this vendor. Only products of a brand being offered by this vendor will be displayed. Edit the vendor and change the brands that they offer, or add products to already offered brands.
-admin.vendorOrder.detail.tab.items.noItems=There are currently no items ordered on this vendor order. To add items, click on the "Products from Vendor" tab and add products from that vendor.
 admin.vendorOrder.detail.vendorOrderTotals=Vendor Order Totals
 admin.vendorOrder.detail.vendorproduct=Product
 admin.vendorOrder.detail.vendorproduct_addToOrder=Add To Order
@@ -704,6 +703,50 @@ define.na=N/A
 define.no=No
 define.none=None
 define.notapplicable=N/A
+define.QMIN=QMIN
+define.QMAX=QMAX
+define.QHB=QHB
+define.QOMIN=QOMIN
+define.QOMAX=QOMAX
+define.QVOMIN=QVOMIN
+define.QVOMAX=QVOMAX
+define.QOH=QOH
+define.QOSH=QOSH
+define.QNDOO=QNDOO
+define.QNDORVO=QNDORVO
+define.QNDOSA=QNDOSA
+define.QNRORO=QNRORO
+define.QNROVO=QNROVO
+define.QNROSA=QNROSA
+define.QC=QC
+define.QE=QE
+define.QNC=QNC
+define.QIATS=QIATS
+define.QATS=QATS
+define.QR=QR
+define.QS=QS
+define.QMIN.full=Quantity Minimum
+define.QMAX.full=Quantity Maximum
+define.QHB.full=Quantity Held Back
+define.QOMIN.full=Quantity Min Per Order
+define.QOMAX.full=Quantity Max Per Order
+define.QVOMIN.full=Quantity Min Per Order
+define.QVOMAX.full=Quantity Max Per Order
+define.QOH.full=Quantity On Hand
+define.QOSH.full=Quantity On Stock Hold
+define.QNDOO.full=Quantity Not Delivered On Order
+define.QNDORVO.full=Quantity Not Delivered On Return Vendor Order
+define.QNDOSA.full=Quantity Not Delivered On Stock Adjustment
+define.QNRORO.full=Quantity Not Received On Return Order
+define.QNROVO.full=Quantity Not Received On Vendor Order
+define.QNROSA.full=Quantity Not Received On Stock Adjustment
+define.QC.full=Quantity Commited
+define.QE.full=Quantity Expected
+define.QNC.full=Quantity Not Commited
+define.QIATS.full=Quantity Immediately Available To Sell
+define.QATS.full=Quantity Available To Sell
+define.QR.full=Quantity Received
+define.QS.full=Quantity Sold
 define.save=Save
 define.select=Select
 define.selectall=Select All
@@ -733,6 +776,7 @@ entity.PromotionRewardShipping.shippingPercentageOff=Shipping Rate % Off
 entity.RoundingRule.roundingRuleDirection=Rounding Direction
 entity.Vendor.brands=Brands Offered
 entity.Vendor.emailAddress=Email Address
+entity.VendorEmailAddress.emailAddress=Email Address
 entity.account.accountDetails=Account Details
 entity.account.accountEmails=Account Emails
 entity.account.accountID=Account ID
@@ -1384,4 +1428,3 @@ validator.uppercase={objectValue} must be upper case.
 validator.url={objectValue} is an invalid URL.
 validator.uuid={objectValue} is an invalid UUID.
 validator.zipCode={objectValue} is an invalid zip code.
-entity.VendorEmailAddress.emailAddress=Email Address
