Added stock adjustment to menu. More work on components.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -571,6 +571,10 @@ admin.sku.updateallprices_success=All SKU prices for this product have been upda
 admin.sku.updateallweights_success=All SKU weights for this product have been updated.
 admin.sku.updatepricegroupsettings_success=Price group rate settings have been updated.
 admin.sku.uploadImage=Upload Image
+
+admin.stockadjustment.createStockAdjustment=Create Stock Adjustment
+admin.stockadjustment.listStockAdjustments=List Stock Adjustments
+
 admin.stockReceiver.detail.allLocations=All Locations
 admin.stockReceiver.detail.dueInAfter=Due In After
 admin.stockReceiver.detail.quantityDueIn=Qty Due In
@@ -1195,6 +1199,12 @@ entity.setting.global=Global Setting
 entity.setting.settingID=settingID
 entity.setting.settingName=Setting Name
 entity.setting.settingValue=Setting Value
+
+entity.stockadjustment.createDateTime=Created DAte
+entity.stockadjustment.fromLocation=From Location
+entity.stockadjustment.toLocation=To Location
+entity.stockadjustment.type=Type
+
 entity.shippingMethod.delete_validateIsDeletable=This shipping method cannot be deleted because it has been used in an order.
 entity.shippingMethod.eligibleAddressZone=Eligible Address Zone
 entity.shippingMethod.eligibleAddressZone_hint=Limits a shipping method to only be used for a given address Zone.  Leave blank to allow for all address
