--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -573,7 +573,9 @@ admin.sku.updatepricegroupsettings_success=Price group rate settings have been u
 admin.sku.uploadImage=Upload Image
 
 admin.stockadjustment.createStockAdjustment=Create Stock Adjustment
+admin.stockadjustment.editStockAdjustment=Edit Stock Adjustment
 admin.stockadjustment.listStockAdjustments=List Stock Adjustments
+admin.stockadjustment.nostockadjustmentsdefined=No stock adjustments has been defined
 
 admin.stockReceiver.detail.allLocations=All Locations
 admin.stockReceiver.detail.dueInAfter=Due In After
