--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -566,7 +566,7 @@ admin.setting.saveshippingservice_nav=Save
 admin.setting.tab.basicsettings=Basic Settings
 admin.setting.tab.workflowsettings=Workflow Settings
 admin.setting.updatefrontendviews=Update All Frontend Views
-admin.setting.updatefrontendviews_confirm=ARE YOU 100% SURE YOU WANT TO UPDATE ALL OF YOUR CUSTOM VIEWS
+admin.setting.updatefrontendviews_confirm=ARE YOU 100% SURE YOU WANT TO UPDATE ALL OF YOUR CUSTOM VIEWS? YOU MAY LOSE YOUR CUSTOMIZATIONS
 admin.sku.updateallprices_success=All SKU prices for this product have been updated.
 admin.sku.updateallweights_success=All SKU weights for this product have been updated.
 admin.sku.updatepricegroupsettings_success=Price group rate settings have been updated.
@@ -574,8 +574,18 @@ admin.sku.uploadImage=Upload Image
 
 admin.stockadjustment.createStockAdjustment=Create Stock Adjustment
 admin.stockadjustment.editStockAdjustment=Edit Stock Adjustment
+admin.stockadjustment.edit.product=Product
+admin.stockadjustment.edit.addProduct=Add Product
 admin.stockadjustment.listStockAdjustments=List Stock Adjustments
-admin.stockadjustment.nostockadjustmentsdefined=No stock adjustments has been defined
+admin.stockadjustment.nostockadjustmentsdefined=No stock adjustments have been defined.
+admin.stockadjustment.noStockAdjustmentItemsDefined=No stock adjustment items has been defined.
+admin.stockadjustment.processStockAdjustment=Process Stock Adjustment
+admin.stockadjustment.saveStockAdjustment=Save
+admin.stockadjustment.savestockadjustment_success=The stock adjustment was sucessfully saved.
+admin.stockAdjustment.stockAdjustmentItemsDialogTitle=Update Items for Product {1} on Stock Adjustment
+
+
+
 
 admin.stockReceiver.detail.allLocations=All Locations
 admin.stockReceiver.detail.dueInAfter=Due In After
@@ -1204,6 +1214,7 @@ entity.setting.settingValue=Setting Value
 
 entity.stockadjustment.createDateTime=Created DAte
 entity.stockadjustment.fromLocation=From Location
+entity.StockAdjustment.stockAdjustmentType=Type
 entity.stockadjustment.toLocation=To Location
 entity.stockadjustment.type=Type
 
