Added slatwall updater

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -497,6 +497,7 @@ admin.setting.detailpaymentservice=Payment Service Detail
 admin.setting.detailpermissions=User Permissions
 admin.setting.detailshippingmethod=Shipping Method Detail
 admin.setting.detailshippingservice=Shipping Service Detail
+admin.setting.detailslatwallupdate=Update Slatwall
 admin.setting.detailviewupdate=Update Views
 admin.setting.edit=Edit Global Settings
 admin.setting.editPaymentMethod=Edit Payment Method
@@ -567,6 +568,9 @@ admin.setting.tab.basicsettings=Basic Settings
 admin.setting.tab.workflowsettings=Workflow Settings
 admin.setting.updatefrontendviews=Update All Frontend Views
 admin.setting.updatefrontendviews_confirm=ARE YOU 100% SURE YOU WANT TO UPDATE ALL OF YOUR CUSTOM VIEWS
+admin.setting.updateslatwall=Update Slatwall
+admin.setting.updateslatwall_confirm=ARE YOU SURE YOU WANT TO UPDATE SLATWALL
+admin.setting.updateslatwall_success=Slatwall updated successfully
 admin.sku.updateallprices_success=All SKU prices for this product have been updated.
 admin.sku.updateallweights_success=All SKU weights for this product have been updated.
 admin.sku.updatepricegroupsettings_success=Price group rate settings have been updated.
