Removed debugging code from BaseService.cfc. Further work on Stock Adjustment.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -578,14 +578,16 @@ admin.sku.updatepricegroupsettings_success=Price group rate settings have been u
 admin.sku.uploadImage=Upload Image
 admin.stockadjustment.createStockAdjustment=Create Stock Adjustment
 admin.stockadjustment.editStockAdjustment=Edit Stock Adjustment
+admin.stockadjustment.editstockadjustmentitem=Edit Stock Adjustment Items
 admin.stockadjustment.edit.product=Product
 admin.stockadjustment.edit.addProduct=Add Product
 admin.stockadjustment.listStockAdjustments=List Stock Adjustments
 admin.stockadjustment.nostockadjustmentsdefined=No stock adjustments have been defined.
-admin.stockadjustment.noStockAdjustmentItemsDefined=No stock adjustment items has been defined.
+admin.stockadjustment.noStockAdjustmentItemsDefined=No stock adjustment items have been defined.
 admin.stockadjustment.processStockAdjustment=Process Stock Adjustment
 admin.stockadjustment.saveStockAdjustment=Save
 admin.stockadjustment.savestockadjustment_success=The stock adjustment was sucessfully saved.
+admin.stockadjustment.savestockadjustment_successnowadditems=The stock adjustment was sucessfully saved. Now add items.
 admin.stockAdjustment.stockAdjustmentItemsDialogTitle=Update Items for Product {1} on Stock Adjustment
 admin.stockReceiver.detail.allLocations=All Locations
 admin.stockReceiver.detail.dueInAfter=Due In After
