--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1394,7 +1394,7 @@ setting.product.allowPreorderFlag=Products can be Preordered
 setting.product.allowPreorderFlag_hint=Indicate whether this product can be preordered
 setting.product.allowShippingFlag=Products can be shipped.
 setting.product.allowShippingFlag_hint=Indicate whether this product is deliverable via shipping
-setting.product.callToOrderFlag=Allow Orders by Phone
+setting.product.callToOrderFlag=Phone Order Only
 setting.product.callToOrderFlag_hint=Indicate whether customers will be able to order this product by phone.
 setting.product.defaultProductTemplate=Default Product Template
 setting.product.imageHeightLarge=Large Image Height
