A lot of work on Stock Adjustments.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -576,11 +576,14 @@ admin.sku.updateallprices_success=All SKU prices for this product have been upda
 admin.sku.updateallweights_success=All SKU weights for this product have been updated.
 admin.sku.updatepricegroupsettings_success=Price group rate settings have been updated.
 admin.sku.uploadImage=Upload Image
+admin.stockadjustment=Stock Adjustment
 admin.stockadjustment.createStockAdjustment=Create Stock Adjustment
+admin.stockadjustment.cannotProcess=Cannot process stock adjustment unless you first add items.
 admin.stockadjustment.editStockAdjustment=Edit Stock Adjustment
 admin.stockadjustment.editstockadjustmentitem=Edit Stock Adjustment Items
 admin.stockadjustment.edit.product=Product
 admin.stockadjustment.edit.addProduct=Add Product
+admin.stockadjustment.edit.editLink=Edit
 admin.stockadjustment.listStockAdjustments=List Stock Adjustments
 admin.stockadjustment.nostockadjustmentsdefined=No stock adjustments have been defined.
 admin.stockadjustment.noStockAdjustmentItemsDefined=No stock adjustment items have been defined.
@@ -588,6 +591,7 @@ admin.stockadjustment.processStockAdjustment=Process Stock Adjustment
 admin.stockadjustment.saveStockAdjustment=Save
 admin.stockadjustment.savestockadjustment_success=The stock adjustment was sucessfully saved.
 admin.stockadjustment.savestockadjustment_successnowadditems=The stock adjustment was sucessfully saved. Now add items.
+admin.stockAdjustment.saveStockAdjustmentItems=Save
 admin.stockAdjustment.stockAdjustmentItemsDialogTitle=Update Items for Product {1} on Stock Adjustment
 admin.stockReceiver.detail.allLocations=All Locations
 admin.stockReceiver.detail.dueInAfter=Due In After
@@ -1219,6 +1223,7 @@ entity.stockadjustment.fromLocation=From Location
 entity.StockAdjustment.stockAdjustmentType=Type
 entity.stockadjustment.toLocation=To Location
 entity.stockadjustment.type=Type
+entity.stockAdjustmentItem.quantity=Quantity
 
 entity.shippingMethod.delete_validateIsDeletable=This shipping method cannot be deleted because it has been used in an order.
 entity.shippingMethod.eligibleAddressZone=Eligible Address Zone
