Finished Stock Adjustments. Added validation.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -579,6 +579,11 @@ admin.sku.uploadImage=Upload Image
 admin.stockadjustment=Stock Adjustment
 admin.stockadjustment.createStockAdjustment=Create Stock Adjustment
 admin.stockadjustment.cannotProcess=Cannot process stock adjustment unless you first add items.
+admin.stockadjustment.deletestockadjustment_confirm=Are you sure that you would like to delete this stock adjustment?
+admin.stockadjustment.deleteStockAdjustment_success=The stock adjustment was successfully deleted.
+admin.stockadjustment.deleteStockAdjustment_error=Errors were encountered while deleting the stock adjustment.
+admin.stockadjustment.deletestockadjustment_disabled=You can not delete a stock adjustment once it has been processed.
+admin.stockadjustment.editstockadjustment_disabled=You can not edit a stock adjustment once it has been processed.
 admin.stockadjustment.editStockAdjustment=Edit Stock Adjustment
 admin.stockadjustment.editstockadjustmentitem=Edit Stock Adjustment Items
 admin.stockadjustment.edit.product=Product
@@ -588,6 +593,8 @@ admin.stockadjustment.listStockAdjustments=List Stock Adjustments
 admin.stockadjustment.nostockadjustmentsdefined=No stock adjustments have been defined.
 admin.stockadjustment.noStockAdjustmentItemsDefined=No stock adjustment items have been defined.
 admin.stockadjustment.processStockAdjustment=Process Stock Adjustment
+admin.stockadjustment.processstockadjustment_success=The stock adjustment was processed successfully and can no longer be edited.
+admin.stockadjustment.processStockAdjustmentConfirm=Are you sure that you want to process this stock adjustment? It will no longer be editable.
 admin.stockadjustment.saveStockAdjustment=Save
 admin.stockadjustment.savestockadjustment_success=The stock adjustment was sucessfully saved.
 admin.stockadjustment.savestockadjustment_successnowadditems=The stock adjustment was sucessfully saved. Now add items.
@@ -1218,8 +1225,9 @@ entity.setting.settingID=settingID
 entity.setting.settingName=Setting Name
 entity.setting.settingValue=Setting Value
 
-entity.stockadjustment.createDateTime=Created DAte
+entity.stockadjustment.createDateTime=Created Date
 entity.stockadjustment.fromLocation=From Location
+entity.stockadjustment.status=Status
 entity.StockAdjustment.stockAdjustmentType=Type
 entity.stockadjustment.toLocation=To Location
 entity.stockadjustment.type=Type
