--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,3 +1,4 @@
+
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.default=Account Dashboard
@@ -576,28 +577,6 @@ admin.sku.updateallprices_success=All SKU prices for this product have been upda
 admin.sku.updateallweights_success=All SKU weights for this product have been updated.
 admin.sku.updatepricegroupsettings_success=Price group rate settings have been updated.
 admin.sku.uploadImage=Upload Image
-admin.stockadjustment=Stock Adjustment
-admin.stockadjustment.createStockAdjustment=Create Stock Adjustment
-admin.stockadjustment.cannotProcess=Cannot process stock adjustment unless you first add items.
-admin.stockadjustment.deletestockadjustment_confirm=Are you sure that you would like to delete this stock adjustment?
-admin.stockadjustment.deleteStockAdjustment_success=The stock adjustment was successfully deleted.
-admin.stockadjustment.deleteStockAdjustment_error=Errors were encountered while deleting the stock adjustment.
-admin.stockadjustment.deletestockadjustment_disabled=You can not delete a stock adjustment once it has been processed.
-admin.stockadjustment.editstockadjustment_disabled=You can not edit a stock adjustment once it has been processed.
-admin.stockadjustment.editStockAdjustment=Edit Stock Adjustment
-admin.stockadjustment.editstockadjustmentitem=Edit Stock Adjustment Items
-admin.stockadjustment.edit.product=Product
-admin.stockadjustment.edit.addProduct=Add Product
-admin.stockadjustment.edit.editLink=Edit
-admin.stockadjustment.listStockAdjustments=List Stock Adjustments
-admin.stockadjustment.nostockadjustmentsdefined=No stock adjustments have been defined.
-admin.stockadjustment.noStockAdjustmentItemsDefined=No stock adjustment items have been defined.
-admin.stockadjustment.processStockAdjustment=Process Stock Adjustment
-admin.stockadjustment.processstockadjustment_success=The stock adjustment was processed successfully and can no longer be edited.
-admin.stockadjustment.processStockAdjustmentConfirm=Are you sure that you want to process this stock adjustment? It will no longer be editable.
-admin.stockadjustment.saveStockAdjustment=Save
-admin.stockadjustment.savestockadjustment_success=The stock adjustment was sucessfully saved.
-admin.stockadjustment.savestockadjustment_successnowadditems=The stock adjustment was sucessfully saved. Now add items.
 admin.stockAdjustment.saveStockAdjustmentItems=Save
 admin.stockAdjustment.stockAdjustmentItemsDialogTitle=Update Items for Product {1} on Stock Adjustment
 admin.stockReceiver.detail.allLocations=All Locations
@@ -608,16 +587,28 @@ admin.stockReceiver.detail.quantityReceived=Qty Received
 admin.stockReceiver.detail.receiving=Receiving
 admin.stockReceiver.detail.sku=Sku
 admin.stockReceiver.saveStockReceiverVendorOrder=Save Stock Receiver
+admin.stockadjustment=Stock Adjustment
+admin.stockadjustment.cannotProcess=Cannot process stock adjustment unless you first add items.
 admin.stockadjustment.createStockAdjustment=Create Stock Adjustment
+admin.stockadjustment.deleteStockAdjustment_error=Errors were encountered while deleting the stock adjustment.
+admin.stockadjustment.deleteStockAdjustment_success=The stock adjustment was successfully deleted.
+admin.stockadjustment.deletestockadjustment_confirm=Are you sure that you would like to delete this stock adjustment?
+admin.stockadjustment.deletestockadjustment_disabled=You can not delete a stock adjustment once it has been processed.
 admin.stockadjustment.edit.addProduct=Add Product
+admin.stockadjustment.edit.editLink=Edit
 admin.stockadjustment.edit.product=Product
 admin.stockadjustment.editStockAdjustment=Edit Stock Adjustment
+admin.stockadjustment.editstockadjustment_disabled=You can not edit a stock adjustment once it has been processed.
+admin.stockadjustment.editstockadjustmentitem=Edit Stock Adjustment Items
 admin.stockadjustment.listStockAdjustments=List Stock Adjustments
 admin.stockadjustment.noStockAdjustmentItemsDefined=No stock adjustment items has been defined.
 admin.stockadjustment.nostockadjustmentsdefined=No stock adjustments have been defined.
 admin.stockadjustment.processStockAdjustment=Process Stock Adjustment
+admin.stockadjustment.processStockAdjustmentConfirm=Are you sure that you want to process this stock adjustment? It will no longer be editable.
+admin.stockadjustment.processstockadjustment_success=The stock adjustment was processed successfully and can no longer be edited.
 admin.stockadjustment.saveStockAdjustment=Save
 admin.stockadjustment.savestockadjustment_success=The stock adjustment was sucessfully saved.
+admin.stockadjustment.savestockadjustment_successnowadditems=The stock adjustment was sucessfully saved. Now add items.
 admin.stockreceiver=Stock Receiver
 admin.stockreceiver.create=Receive Items
 admin.stockreceiver.createStockReceiver=Create Stock Receiver
@@ -1235,18 +1226,6 @@ entity.setting.global=Global Setting
 entity.setting.settingID=settingID
 entity.setting.settingName=Setting Name
 entity.setting.settingValue=Setting Value
-<<<<<<< HEAD
-=======
-
-entity.stockadjustment.createDateTime=Created Date
-entity.stockadjustment.fromLocation=From Location
-entity.stockadjustment.status=Status
-entity.StockAdjustment.stockAdjustmentType=Type
-entity.stockadjustment.toLocation=To Location
-entity.stockadjustment.type=Type
-entity.stockAdjustmentItem.quantity=Quantity
-
->>>>>>> bhendel/develop
 entity.shippingMethod.delete_validateIsDeletable=This shipping method cannot be deleted because it has been used in an order.
 entity.shippingMethod.eligibleAddressZone=Eligible Address Zone
 entity.shippingMethod.eligibleAddressZone_hint=Limits a shipping method to only be used for a given address Zone.  Leave blank to allow for all address
@@ -1314,11 +1293,13 @@ entity.stock.qexp=qexp
 entity.stock.qoh=qoh
 entity.stock.sku=sku
 entity.stock.stockID=stockID
+entity.stockAdjustmentItem.quantity=Quantity
 entity.stockadjustment.adjustmentDateTime=adjustmentDateTime
 entity.stockadjustment.adjustmentType=adjustmentType
 entity.stockadjustment.createDateTime=Created DAte
 entity.stockadjustment.fromLocation=From Location
 entity.stockadjustment.purchaseOrder=purchaseOrder
+entity.stockadjustment.status=Status
 entity.stockadjustment.stockAdjustmentID=stockAdjustmentID
 entity.stockadjustment.stockAdjustmentItems=stockAdjustmentItems
 entity.stockadjustment.toLocation=To Location
@@ -1420,17 +1401,19 @@ setting.paymentMethod.creditCard.storeCreditCardWithAccount=Allow customers to s
 setting.paymentMethod.creditCard.storeCreditCardWithOrderPayment=Store credit card numbers with orders
 setting.product=Product
 setting.product.activeFlag_hint=Indicate if the product is active and will be displayed.
-setting.product.allowBackorderFlag=Products can be Backordered
+setting.product.allowBackorderFlag=Backorder OK
 setting.product.allowBackorderFlag_hint=Indicate whether this product can be backordered
-setting.product.allowDropshipFlag=Products can be dropshipped
+setting.product.allowDropshipFlag=Dropship OK
 setting.product.allowDropshipFlag_hint=Indicate whether this product can be dropshipped
-setting.product.allowPreorderFlag=Products can be Preordered
+setting.product.allowPreorderFlag=Preorder OK
 setting.product.allowPreorderFlag_hint=Indicate whether this product can be preordered
-setting.product.allowShippingFlag=Products can be shipped.
+setting.product.allowShippingFlag=Shipping OK
 setting.product.allowShippingFlag_hint=Indicate whether this product is deliverable via shipping
 setting.product.callToOrderFlag=Phone Order Only
 setting.product.callToOrderFlag_hint=Indicate whether customers will be able to order this product by phone.
 setting.product.defaultProductTemplate=Default Product Template
+setting.product.displayTemplate=Display Template
+setting.product.displayTemplate_hint=The mura page that you would like to use as the template for displaying on the front-end
 setting.product.imageHeightLarge=Large Image Height
 setting.product.imageHeightMedium=Medium Image Height
 setting.product.imageHeightSmall=Small Image Height
@@ -1439,7 +1422,19 @@ setting.product.imageWidthMedium=Medium Image Width
 setting.product.imageWidthSmall=Small Image Width
 setting.product.imageextension=Image Extension
 setting.product.missingimagepath=Missing Image Path
+setting.product.quantityHeldBack=Hold Back Quantity
+setting.product.quantityHeldBack_hint=Quantity To Hold Back From ATS (Available To Sell) Calculations
+setting.product.quantityMaximum=Max Quantity
+setting.product.quantityMaximum_hint=Maximum inventory level for a SKU per location (Min / Max Ordering)
+setting.product.quantityMinimum=Min Quantity
+setting.product.quantityMinimum_hint=Minimum inventory level for a SKU per location before reorder is flagged (Min / Max Ordering)
+setting.product.quantityOrderMaximum=Max Order Quantity
+setting.product.quantityOrderMaximum_hint=Maximum per SKU quantity allowed on order
+setting.product.quantityOrderMinimum=Min Order Quantity
+setting.product.quantityOrderMinimum_hint=Minimum per SKU quantity allowed on order
 setting.product.rootProductCategory=Root Product Category
+setting.product.shippingWeight=Shipping Weight
+setting.product.shippingWeight_hint=Shipping weight of a single quantity of a SKU
 setting.product.titleString=Product Title Format
 setting.product.trackInventoryFlag=Track Inventory
 setting.product.trackInventoryFlag_hint=Select this if you would like the system to track inventory at this level.
