--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -602,11 +602,13 @@ admin.stockAdjustment.saveStockAdjustmentItems=Save
 admin.stockAdjustment.stockAdjustmentItemsDialogTitle=Update Items for Product {1} on Stock Adjustment
 admin.stockReceiver.detail.allLocations=All Locations
 admin.stockReceiver.detail.dueInAfter=Due In After
+admin.stockReceiver.detail.location=Receiving Location
 admin.stockReceiver.detail.quantityDueIn=Qty Due In
 admin.stockReceiver.detail.quantityOrdered=Qty Ordered
 admin.stockReceiver.detail.quantityReceived=Qty Received
-admin.stockReceiver.detail.receiving=Receiving
+admin.stockReceiver.detail.receiving=Receiving Quantity
 admin.stockReceiver.detail.sku=Sku
+admin.stockreceiver.detailStockReceiver=Stock Receiver Details
 admin.stockReceiver.saveStockReceiverVendorOrder=Save Stock Receiver
 admin.stockadjustment.createStockAdjustment=Create Stock Adjustment
 admin.stockadjustment.edit.addProduct=Add Product
