Way to much to explain here. Debugged return process. Moved buttons around on order detail, added address to location, etc.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -233,6 +233,8 @@ admin.order.refundorderpayment_error=Errors where encountered while attempting t
 admin.order.refundorderpayment_invalidAmount=The amount for refund must be an amount greater than 0 up to the amount that has been charged on the payment\: {amountCharged}.
 admin.order.refundorderpayment_success=Payment refund processed
 admin.order.saveorderreturn=Save
+admin.order.saveOrderReturn_error=Errors where encountered while attempting to save the return.
+admin.order.saveOrderReturn_success=The order return was saved successfully.
 admin.order.search=Search
 admin.order.search.invaliddates=An invalid date was entered
 admin.orderfulfillment.process=Process Fulfillment
@@ -791,7 +793,7 @@ entity.Account.phoneNumber=Phone Number
 entity.Order.fulfillmentTotal=Delivery Charges
 entity.Order.fulfillmenttotal=Fulfillment Amount
 entity.Order.orderTota=Order Total
-entity.Order.previouslyrefundedshipping=Previously Refunded Shipping
+entity.Order.previouslyrefundedfulfillment=Previously Refunded Fulfillment
 entity.Order.refundshippingamount=Refund Shipping Amount
 entity.Order.subtotal=Subtotal
 entity.Order.taxtotal=Tax Total
@@ -996,6 +998,7 @@ entity.order.orderNumber=Order Number
 entity.order.orderOpenDateTime=Date Placed
 entity.order.orderShipments=Order Shipments
 entity.order.orderStatusType=Order Status
+entity.order.orderType=Order Type
 entity.order.orderid=Order ID
 entity.order.total=Total
 entity.orderDelivery=Order Delivery
