Fixed Create Date language.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1301,7 +1301,7 @@ entity.stock.stockID=stockID
 entity.stockAdjustmentItem.quantity=Quantity
 entity.stockadjustment.adjustmentDateTime=adjustmentDateTime
 entity.stockadjustment.adjustmentType=adjustmentType
-entity.stockadjustment.createDateTime=Created DAte
+entity.stockadjustment.createDateTime=Created Date
 entity.stockadjustment.fromLocation=From Location
 entity.stockadjustment.purchaseOrder=purchaseOrder
 entity.stockadjustment.status=Status
