Added product delete rbkey

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -232,9 +232,9 @@ admin.order.refundorderpayment=Refund Payment
 admin.order.refundorderpayment_error=Errors where encountered while attempting to process the refund.
 admin.order.refundorderpayment_invalidAmount=The amount for refund must be an amount greater than 0 up to the amount that has been charged on the payment\: {amountCharged}.
 admin.order.refundorderpayment_success=Payment refund processed
-admin.order.saveorderreturn=Save
 admin.order.saveOrderReturn_error=Errors where encountered while attempting to save the return.
 admin.order.saveOrderReturn_success=The order return was saved successfully.
+admin.order.saveorderreturn=Save
 admin.order.search=Search
 admin.order.search.invaliddates=An invalid date was entered
 admin.orderfulfillment.process=Process Fulfillment
@@ -297,6 +297,7 @@ admin.product.deleteImage_error=An error was encountered when trying to delete t
 admin.product.deleteImage_success=Image deleted
 admin.product.deleteSku_success=SKU was deleted
 admin.product.delete_confirm=Are you sure you want to delete this product?
+admin.product.delete_disabled=The product can not be deleted, but you can set "Active" to no so that it doesn't show up.
 admin.product.delete_nav=Delete
 admin.product.delete_success=The Product was successfully deleted.
 admin.product.deleteproducttype=Delete Product Type
@@ -589,7 +590,6 @@ admin.stockReceiver.detail.quantityOrdered=Qty Ordered
 admin.stockReceiver.detail.quantityReceived=Qty Received
 admin.stockReceiver.detail.receiving=Receiving Quantity
 admin.stockReceiver.detail.sku=Sku
-admin.stockreceiver.detailStockReceiver=Stock Receiver Details
 admin.stockReceiver.saveStockReceiverVendorOrder=Save Stock Receiver
 admin.stockadjustment=Stock Adjustment
 admin.stockadjustment.cannotProcess=Cannot process stock adjustment unless you first add items.
@@ -617,6 +617,7 @@ admin.stockreceiver=Stock Receiver
 admin.stockreceiver.create=Receive Items
 admin.stockreceiver.createStockReceiver=Create Stock Receiver
 admin.stockreceiver.deliverFromLocation=Deliver From Location
+admin.stockreceiver.detailStockReceiver=Stock Receiver Details
 admin.stockreceiver.receiveForLocation=Receive For Location
 admin.stockreceiver.selectReceiveForLocation=Select
 admin.stockreceiver.typeName_order=Return Order
