Working on revisions for Order Returns.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -180,6 +180,7 @@ admin.order.chargeOrderPayment_error=Errors were encountered while charging the 
 admin.order.chargeOrderPayment_success=Payment charged successfully.
 admin.order.chargeorderpayment=Charge Payment
 admin.order.createOrderReturn=Create Return Order
+admin.order.createOrderReturn_disabled=Order cannot be returned as no items have been delivered.
 admin.order.default=Order Dashboard
 admin.order.detail=Order Detail
 admin.order.detail.basicorderinfo=Basic Order Info
@@ -191,17 +192,21 @@ admin.order.detail.paymentdetails=Payment Details
 admin.order.detail.payments=Payments
 admin.order.detail.priceextended=Price Extended
 admin.order.detail.quantityshipped=Quantity Shipped
+admin.order.detail.quantityreturned=Quantity Returned
 admin.order.detail.shipments=Shipments
 admin.order.detail.shippingProvider.ratetable=Rate Table
 admin.order.detail.subtotal=Subtotal
 admin.order.detail.tab.OrderActivityLog=Order Activity Log
 admin.order.detail.tab.orderDeliveries=Order Deliveries
 admin.order.detail.tab.orderFulfillments=Order Fullfillments
+admin.order.detail.tab.returnOrderItems=Return Order Items
 admin.order.detail.tab.referencingOrders=Referencing Orders (Returns)
 admin.order.detail.total=Total
 admin.order.detail.totalDiscounts=Total Discounts
 admin.order.detail.totalFulfillmentCharge=Fulfillment Charges
+admin.order.detail.totalFulfillmentRefund=Fulfillment Refund
 admin.order.detail.totaltax=Total Tax
+admin.order.detailReturn=Order Return Detail
 admin.order.detailOrderFulfillmentShipping.enterTrackingNumber=Enter Tracking Number
 admin.order.detailcart=Cart Details
 admin.order.detailcart.basiccaartinfo=Basic Cart Info
@@ -1001,6 +1006,7 @@ entity.order.orderShipments=Order Shipments
 entity.order.orderStatusType=Order Status
 entity.order.orderType=Order Type
 entity.order.orderid=Order ID
+entity.order.OrderNumberToOriginal=Original Order Number
 entity.order.total=Total
 entity.orderDelivery=Order Delivery
 entity.orderDelivery.deliveryCloseDateTime=Delivery Close Date
