Added "items previously returned" count and restriction on returning items. Added "Extended cost" to vendor orders. Various other small fixes.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -595,7 +595,7 @@ admin.stockReceiver.detail.quantityOrdered=Qty Ordered
 admin.stockReceiver.detail.quantityReceived=Qty Received
 admin.stockReceiver.detail.receiving=Receiving Quantity
 admin.stockReceiver.detail.sku=Sku
-admin.stockReceiver.saveStockReceiverVendorOrder=Save Stock Receiver
+admin.stockReceiver.saveStockReceiverVendorOrder=Save
 admin.stockadjustment=Stock Adjustment
 admin.stockadjustment.cannotProcess=Cannot process stock adjustment unless you first add items.
 admin.stockadjustment.createStockAdjustment=Create Stock Adjustment
@@ -1355,6 +1355,7 @@ entity.vendorOrder.vendorOrderNumber=Order Number
 entity.vendorOrder.vendorOrderType=Order Type
 entity.vendorOrder.vendorOrderid=Vendor Order ID
 entity.vendorOrderitem.detail.cost=Cost
+entity.vendorOrderitem.detail.extendedCost=Extended Cost
 entity.vendorOrderitem.quantityIn=Quantity In
 entity.vendorOrderitem.stockLocation=Location
 entity.vendoraddress.address=address
