--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1425,8 +1425,8 @@ setting.product.allowShippingFlag_hint=Indicate whether this product is delivera
 setting.product.callToOrderFlag=Phone Order Only
 setting.product.callToOrderFlag_hint=Indicate whether customers will be able to order this product by phone.
 setting.product.defaultProductTemplate=Default Product Template
-setting.product.displayTemplate=Display Template
-setting.product.displayTemplate_hint=The mura page that you would like to use as the template for displaying on the front-end
+setting.product.productDisplayTemplate=Product Display Template
+setting.product.productDisplayTemplate_hint=The mura page that you would like to use as the template for displaying product on the front-end
 setting.product.imageHeightLarge=Large Image Height
 setting.product.imageHeightMedium=Medium Image Height
 setting.product.imageHeightSmall=Small Image Height
