Updated comments to work for orders.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -191,23 +191,24 @@ admin.order.detail.ordertotals=Order Totals
 admin.order.detail.paymentdetails=Payment Details
 admin.order.detail.payments=Payments
 admin.order.detail.priceextended=Price Extended
-admin.order.detail.quantityshipped=Quantity Shipped
 admin.order.detail.quantityreturned=Quantity Returned
+admin.order.detail.quantityshipped=Quantity Shipped
 admin.order.detail.shipments=Shipments
 admin.order.detail.shippingProvider.ratetable=Rate Table
 admin.order.detail.subtotal=Subtotal
 admin.order.detail.tab.OrderActivityLog=Order Activity Log
+admin.order.detail.tab.comments=Comments
 admin.order.detail.tab.orderDeliveries=Order Deliveries
 admin.order.detail.tab.orderFulfillments=Order Fullfillments
-admin.order.detail.tab.returnOrderItems=Return Order Items
 admin.order.detail.tab.referencingOrders=Referencing Orders (Returns)
+admin.order.detail.tab.returnOrderItems=Return Order Items
 admin.order.detail.total=Total
 admin.order.detail.totalDiscounts=Total Discounts
 admin.order.detail.totalFulfillmentCharge=Fulfillment Charges
 admin.order.detail.totalFulfillmentRefund=Fulfillment Refund
 admin.order.detail.totaltax=Total Tax
-admin.order.detailReturn=Order Return Detail
 admin.order.detailOrderFulfillmentShipping.enterTrackingNumber=Enter Tracking Number
+admin.order.detailReturn=Order Return Detail
 admin.order.detailcart=Cart Details
 admin.order.detailcart.basiccaartinfo=Basic Cart Info
 admin.order.detailcart.noorderitemsincart=There are no items in this cart.
@@ -775,6 +776,8 @@ define.QVOMIN=QVOMIN
 define.QVOMIN.full=Quantity Min Per Order
 define.all=All
 define.cancel=Cancel
+define.createdByAccount=Created By
+define.createdDateTime=Created
 define.definedin=Defined In
 define.detail=Detail
 define.email=E-Mail
@@ -932,6 +935,7 @@ entity.cartitem.cart=cart
 entity.cartitem.cartItemID=cartItemID
 entity.cartitem.quantity=quantity
 entity.cartitem.sku=sku
+entity.comment.comment=Comment
 entity.contentproduct.contentID=contentID
 entity.contentproduct.contentProductID=contentProductID
 entity.contentproduct.product=product
@@ -994,6 +998,7 @@ entity.optiongroup.optionGroupImage=Option Group Image
 entity.optiongroup.optionGroupImage_hint=Associate an image for this option Group. Supported Formats. JPG,PNG,GIF.
 entity.optiongroup.optionGroupName=Option Group Name
 entity.optiongroup.options=Options
+entity.order.OrderNumberToOriginal=Original Order Number
 entity.order.account=Customer Account
 entity.order.billingAddress=billingAddress
 entity.order.cancel_validatestatus=Order cannot be deleted due to order status ({statusValue})
@@ -1006,7 +1011,6 @@ entity.order.orderShipments=Order Shipments
 entity.order.orderStatusType=Order Status
 entity.order.orderType=Order Type
 entity.order.orderid=Order ID
-entity.order.OrderNumberToOriginal=Original Order Number
 entity.order.total=Total
 entity.orderDelivery=Order Delivery
 entity.orderDelivery.deliveryCloseDateTime=Delivery Close Date
@@ -1425,8 +1429,6 @@ setting.product.allowShippingFlag_hint=Indicate whether this product is delivera
 setting.product.callToOrderFlag=Phone Order Only
 setting.product.callToOrderFlag_hint=Indicate whether customers will be able to order this product by phone.
 setting.product.defaultProductTemplate=Default Product Template
-setting.product.productDisplayTemplate=Product Display Template
-setting.product.productDisplayTemplate_hint=The mura page that you would like to use as the template for displaying product on the front-end
 setting.product.imageHeightLarge=Large Image Height
 setting.product.imageHeightMedium=Medium Image Height
 setting.product.imageHeightSmall=Small Image Height
@@ -1435,6 +1437,8 @@ setting.product.imageWidthMedium=Medium Image Width
 setting.product.imageWidthSmall=Small Image Width
 setting.product.imageextension=Image Extension
 setting.product.missingimagepath=Missing Image Path
+setting.product.productDisplayTemplate=Product Display Template
+setting.product.productDisplayTemplate_hint=The mura page that you would like to use as the template for displaying product on the front-end
 setting.product.quantityHeldBack=Hold Back Quantity
 setting.product.quantityHeldBack_hint=Quantity To Hold Back From ATS (Available To Sell) Calculations
 setting.product.quantityMaximum=Max Quantity
