Working on Sale Price

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1282,6 +1282,8 @@ entity.sku.qexp=QEXP
 entity.sku.qia=QIA
 entity.sku.qoh=QOH
 entity.sku.remoteID=Remote ID
+entity.sku.salePrice=Sale Price
+entity.sku.salePriceExpirationDateTime=Sale Price Ends
 entity.sku.shippingWeight=Shipping Weight
 entity.sku.skuCode=SKU Code
 entity.sku.skuCode_validateUnique=This SKU code is already in use.
