Updated how the skuCache gets its values.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -577,6 +577,8 @@ admin.setting.saveshippingservice=Save Shipping Service
 admin.setting.saveshippingservice_nav=Save
 admin.setting.tab.basicsettings=Basic Settings
 admin.setting.tab.workflowsettings=Workflow Settings
+admin.setting.updateSkuCache=Update Sku Cache
+admin.setting.updateSkuCache_success=Sku Cache Update Started
 admin.setting.updatefrontendviews=Update All Frontend Views
 admin.setting.updatefrontendviews_confirm=ARE YOU 100% SURE YOU WANT TO UPDATE ALL OF YOUR CUSTOM VIEWS? YOU MAY LOSE YOUR CUSTOMIZATIONS
 admin.setting.updateslatwall=Update Slatwall
