Added Shipping Weight Unit of Measurement

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1455,6 +1455,7 @@ setting.product.quantityOrderMinimum=Min Order Quantity
 setting.product.quantityOrderMinimum_hint=Minimum per SKU quantity allowed on order
 setting.product.rootProductCategory=Root Product Category
 setting.product.shippingWeight=Shipping Weight
+setting.product.shippingWeightUnitCode=Shipping Weight Unit of Measurement
 setting.product.shippingWeight_hint=Shipping weight of a single quantity of a SKU
 setting.product.titleString=Product Title Format
 setting.product.trackInventoryFlag=Track Inventory
