Added Comments to Stock Adjustment.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -588,6 +588,8 @@ admin.sku.updateallprices_success=All SKU prices for this product have been upda
 admin.sku.updateallweights_success=All SKU weights for this product have been updated.
 admin.sku.updatepricegroupsettings_success=Price group rate settings have been updated.
 admin.sku.uploadImage=Upload Image
+admin.stockAdjustment.detailStockAdjustment.tab.comments=Comments
+admin.stockAdjustment.detailStockAdjustment.tab.products=Products
 admin.stockAdjustment.saveStockAdjustmentItems=Save
 admin.stockAdjustment.stockAdjustmentItemsDialogTitle=Update Items for Product {1} on Stock Adjustment
 admin.stockReceiver.detail.allLocations=All Locations
