Working on skuCache settings.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1414,6 +1414,7 @@ setting.advanced.logExceptionsToDatabaseFlag=Log Unexpected Errors to Database
 setting.advanced.logMessages=Slatwall Application Logging
 setting.advanced.showRemoteIDFields=View RemoteID Fields in Administrator
 setting.advanced.timeFormat=Time Format
+setting.advanced.useSkuCacheFlag=Use Sku Cache
 setting.inherit=Inherit
 setting.order=Order
 setting.order.orderPlacedEmailBCC=New Order Placed Email BCC
