--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -521,6 +521,7 @@ admin.setting.editshippingmethod=Edit Shipping Method
 admin.setting.editshippingservice=Configure Shipping Service
 admin.setting.edittaxcategory=Edit Tax Category
 admin.setting.edittaxcategory_nav=Edit
+admin.setting.fulfillmentMethod.pickup=Pickup
 admin.setting.fulfillmentmethod.shipping=Shipping
 admin.setting.fulfillmentmethod.shippingsettings=Shipping Settings
 admin.setting.importbundledata=Import Bundle Data
@@ -541,6 +542,8 @@ admin.setting.listshippingmethods_nav=Shipping Methods
 admin.setting.listshippingservices=Shipping Service Listing
 admin.setting.listshippingservices.servicedisplayname=Shipping Service
 admin.setting.listshippingservices_nav=Shipping Services
+admin.setting.paymentMethod.cash=Cash (beta)
+admin.setting.paymentMethod.check=Check (beta)
 admin.setting.paymentMethod.creditCard=Credit Card
 admin.setting.paymentMethod.creditCard.checkoutTransactionType.authorize=Authorize Only
 admin.setting.paymentMethod.creditCard.checkoutTransactionType.authorizeAndCharge=Authorize and Charge
@@ -548,6 +551,7 @@ admin.setting.paymentMethod.creditCard.checkoutTransactionType.none=None
 admin.setting.paymentMethod.creditCardsAccepted=Credit Cards Accepted
 admin.setting.paymentMethod.creditcardActionOnCheckout=On Checkout
 admin.setting.paymentMethod.dwolla=Dwolla (beta)
+admin.setting.paymentMethod.giftCard=Gift Card (beta)
 admin.setting.paymentMethod.paypalExpress=Paypal Express (beta)
 admin.setting.save=Save Settings
 admin.setting.saveAddressZoneLocation=Save Address Zone Location
