--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -783,6 +783,7 @@ define.QVOMAX.full=Quantity Max Per Order
 define.QVOMIN=QVOMIN
 define.QVOMIN.full=Quantity Min Per Order
 define.all=All
+define.autoIncrement=Auto Increment
 define.cancel=Cancel
 define.createdByAccount=Created By
 define.createdDateTime=Created
@@ -1421,6 +1422,7 @@ setting.advanced.timeFormat=Time Format
 setting.advanced.useSkuCacheFlag=Use Sku Cache
 setting.inherit=Inherit
 setting.order=Order
+setting.order.orderNumberGeneration=Order Number Generation
 setting.order.orderPlacedEmailBCC=New Order Placed Email BCC
 setting.order.orderPlacedEmailCC=New Order Placed Email CC
 setting.order.orderPlacedEmailFrom=New Order Placed Email From
