--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -636,6 +636,48 @@ admin.stockreceiver.receiveForLocation=Receive For Location
 admin.stockreceiver.selectReceiveForLocation=Select
 admin.stockreceiver.typeName_order=Return Order
 admin.stockreceiver.typeName_vendorOrder=Vendor Order
+admin.subscription=Subscription Manager
+admin.subscription.createSubscriptionTerm=Create New Subscription Term
+admin.subscription.deleteSubscriptionTerm=Delete Subscription Term
+admin.subscription.deleteSubscriptionTerm_confirm=Are you sure you want to delete this subscription term?
+admin.subscription.deleteSubscriptionTerm_disabled=Subscription Term can not be deleted because it is in use
+admin.subscription.deleteSubscriptionTerm_nav=Delete
+admin.subscription.deleteSubscriptionTerm_success=Subscription Term was deleted successfully
+admin.subscription.detailSubscriptionTerm=Subscription Term Detail
+admin.subscription.editSubscriptionTerm=Edit Subscription Term
+admin.subscription.listSubscriptionTerms=List Subscription Terms
+admin.subscription.noSubscriptionTermsdefined=There are currently no subscription terms defined.
+admin.subscription.saveSubscriptionTerm=Save Subscription Term
+admin.subscription.saveSubscriptionTerm_nav=Save
+admin.subscription.saveSubscriptionTerm_success=Subscription Term was saved successfully
+admin.subscription.createSubscriptionBenefit=Create New Subscription Benefit
+admin.subscription.deleteSubscriptionBenefit=Delete Subscription Benefit
+admin.subscription.deleteSubscriptionBenefit_confirm=Are you sure you want to delete this subscription benefit?
+admin.subscription.deleteSubscriptionBenefit_disabled=Subscription Benefit can not be deleted because it is in use
+admin.subscription.deleteSubscriptionBenefit_nav=Delete
+admin.subscription.deleteSubscriptionBenefit_success=Subscription Benefit was deleted successfully
+admin.subscription.detailSubscriptionBenefit=Subscription Benefit Detail
+admin.subscription.editSubscriptionBenefit=Edit Subscription Benefit
+admin.subscription.listSubscriptionBenefits=List Subscription Benefits
+admin.subscription.noSubscriptionBenefitsdefined=There are currently no subscription benefits defined.
+admin.subscription.saveSubscriptionBenefit=Save Subscription Benefit
+admin.subscription.saveSubscriptionBenefit_nav=Save
+admin.subscription.saveSubscriptionBenefit_success=Subscription Benefit was saved successfully
+admin.term=Term Manager
+admin.term.create=Create New Term
+admin.term.delete=Delete Term
+admin.term.delete_confirm=Are you sure you want to delete this term?
+admin.term.delete_disabled=Term can not be deleted because it is in use
+admin.term.delete_nav=Delete
+admin.term.delete_success=Term was deleted successfully
+admin.term.detail=Term Detail
+admin.term.edit=Edit Term
+admin.term.list=List Terms
+admin.term.notermsdefined=There are currently no terms defined.
+admin.term.save=Save Term
+admin.term.save_nav=Save
+admin.term.save_success=Term was saved successfully
+admin.term.saveterm_success=The term was successfully saved.
 admin.vendor=Vendor Manager
 admin.vendor.createVendor=Create New Vendor
 admin.vendor.deleteVendor=Delete Vendor
@@ -1338,9 +1380,30 @@ entity.stockadjustmentitem.stockAdjustmentItemID=stockAdjustmentItemID
 entity.stockreceiver.boxCount=Box Count
 entity.stockreceiver.createdDateTime=Created Date
 entity.stockreceiver.packingSlipNumber=Packing Slip Number
+entity.subscriptionBenefit.subscriptionBenefitName=Subscription Benefit Name
+entity.subscriptionBenefit.accessCodeType=Access Code Type
+entity.subscriptionBenefit.cmsGroupIDs=CMS Groups
+entity.subscriptionBenefit.cmsGroupQuantity=License Count (CMS Group)
+entity.subscriptionBenefit.priceGroups=Price Groups
+entity.subscriptionBenefit.priceGroupQuantity=License Count (Price Group)
+entity.subscriptionBenefit.promotions=Promotions
+entity.subscriptionBenefit.promotionQuantity=License Count (Promotion)
+entity.subscriptionTerm.subscriptionTermName=Subscription Term Name
+entity.subscriptionTerm.initialTerm=Initial Term
+entity.subscriptionTerm.renewalTerm=Renewal Term
+entity.subscriptionTerm.gracePeriodTerm=Grace Period Term
+entity.subscriptionTerm.allowProrateFlag=Allow Prorate
+entity.subscriptionTerm.autoRetryPaymentDays=Auto Retry After Days
+entity.subscriptionTerm.billedOnDayOfMonth=Bill On Day of Month
+entity.subscriptionTerm.subscriptionBenefits=Subscription Benefits
 entity.taxCategory.taxCategoryName=Category Name
 entity.taxCategoryRate.addressZone=Address Zone
 entity.taxCategoryRate.taxRate=Tax Rate (example use 8.75 for 8.75%)
+entity.term.termName=Term Name
+entity.term.termHours=Term Hours
+entity.term.termDays=Term Days
+entity.term.termMonths=Term Months
+entity.term.termYears=Term Years
 entity.type.childTypes=childTypes
 entity.type.parentType=parentType
 entity.type.systemCode=systemCode
