--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -378,6 +378,7 @@ admin.product.selectoptions=Select Options
 admin.product.selectparentproducttype=Select
 admin.product.selectproductpages=Select Product Pages for Frontend Display
 admin.product.selectproducttype=Select Product Type
+admin.product.selectsubscriptionterms=Select Subscription Terms
 admin.product.showbasicinfo=Show Basic Product Info
 admin.product.skupriceupdatedialog.newprice=New Price
 admin.product.skupriceupdatedialog.title=Update SKU Prices
@@ -1333,6 +1334,7 @@ entity.sku.qexp=QEXP
 entity.sku.qia=QIA
 entity.sku.qoh=QOH
 entity.sku.remoteID=Remote ID
+entity.sku.renewalPrice=Renewal Price
 entity.sku.salePrice=Sale Price
 entity.sku.salePriceExpirationDateTime=Sale Price Ends
 entity.sku.shippingWeight=Shipping Weight
@@ -1340,6 +1342,7 @@ entity.sku.skuCode=SKU Code
 entity.sku.skuCode_validateUnique=This SKU code is already in use.
 entity.sku.skuID=skuID
 entity.sku.stocks=stocks
+entity.sku.subscriptionTerm=Subscription Term
 entity.sku.webQC=webQC
 entity.sku.webQEXP=webQEXP
 entity.sku.webQOH=webQOH
