Setup promotions to be able to take advantage of rounding rules.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -820,6 +820,7 @@ entity.PriceGroupRate.roundingRule=Rounding Rule
 entity.PromotionRewardProduct.brands=Brands
 entity.PromotionRewardProduct.itemDiscountType=Discount Type
 entity.PromotionRewardProduct.options=Options
+entity.PromotionRewardProduct.roundingRule=Rounding Rule
 entity.PromotionRewardShipping.shippingAmount=Shipping Rate Fixed Amount
 entity.PromotionRewardShipping.shippingAmountOff=Shipping Rate Amount Off
 entity.PromotionRewardShipping.shippingDiscountType=Shipping Discount Type
