Added Product Cache

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -581,10 +581,12 @@ admin.setting.saveshippingservice=Save Shipping Service
 admin.setting.saveshippingservice_nav=Save
 admin.setting.tab.basicsettings=Basic Settings
 admin.setting.tab.workflowsettings=Workflow Settings
+admin.setting.updateProductCache_success=Product Cache Update Started
 admin.setting.updateSkuCache=Update Sku Cache
 admin.setting.updateSkuCache_success=Sku Cache Update Started
 admin.setting.updatefrontendviews=Update All Frontend Views
 admin.setting.updatefrontendviews_confirm=ARE YOU 100% SURE YOU WANT TO UPDATE ALL OF YOUR CUSTOM VIEWS? YOU MAY LOSE YOUR CUSTOMIZATIONS
+admin.setting.updateproductcache=Update Product Cache
 admin.setting.updateslatwall=Update Slatwall
 admin.setting.updateslatwall_confirm=ARE YOU SURE YOU WANT TO UPDATE SLATWALL
 admin.setting.updateslatwall_success=Slatwall updated successfully
@@ -1420,6 +1422,7 @@ setting.advanced.logExceptionsToDatabaseFlag=Log Unexpected Errors to Database
 setting.advanced.logMessages=Slatwall Application Logging
 setting.advanced.showRemoteIDFields=View RemoteID Fields in Administrator
 setting.advanced.timeFormat=Time Format
+setting.advanced.useProductCacheFlag=User Product Cache
 setting.advanced.useSkuCacheFlag=Use Sku Cache
 setting.inherit=Inherit
 setting.order=Order
