Model changes for subscription / electronic fulfillment

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1386,8 +1386,10 @@ entity.stockreceiver.createdDateTime=Created Date
 entity.stockreceiver.packingSlipNumber=Packing Slip Number
 entity.subscriptionBenefit.subscriptionBenefitName=Subscription Benefit Name
 entity.subscriptionBenefit.accessCodeType=Access Code Type
-entity.subscriptionBenefit.cmsGroupIDs=CMS Groups
-entity.subscriptionBenefit.cmsGroupQuantity=License Count (CMS Group)
+entity.subscriptionBenefit.categories=Categories
+entity.subscriptionBenefit.categoryQuantity=License Count (Category)
+entity.subscriptionBenefit.content=Content
+entity.subscriptionBenefit.contentQuantity=License Count (Content)
 entity.subscriptionBenefit.priceGroups=Price Groups
 entity.subscriptionBenefit.priceGroupQuantity=License Count (Price Group)
 entity.subscriptionBenefit.promotions=Promotions
