Added promotion account entity and PromotionApplied subtypes for fulfillment and order

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,4 +1,5 @@
-
+#Created by JInto - www.guh-software.de
+#Fri Mar 02 14:44:55 EST 2012
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.default=Account Dashboard
@@ -1204,6 +1205,8 @@ entity.promotion.activeFlag=Active
 entity.promotion.delete_success=Promotion Deleted
 entity.promotion.delete_validateisDeletable=This promotion cannot be deleted because it is in use.
 entity.promotion.endDateTime=End Date
+entity.promotion.maximumAccountUseCount=Maximum Account Use Count
+entity.promotion.maximumUseCount=Maximum Use Count
 entity.promotion.promotionDescription=Promotion Description
 entity.promotion.promotionName=Promotion Name
 entity.promotion.promotionSummary=Promotion Summary
@@ -1212,6 +1215,8 @@ entity.promotionCode=Promotion Code
 entity.promotionCode.delete_success=Promotion Code Deleted
 entity.promotionCode.delete_validateisassigned=This promotion code cannot be deleted because it is in use.
 entity.promotionCode.endDateTime=End Date
+entity.promotionCode.maximumAccountUseCount=Maximum Account Use Count
+entity.promotionCode.maximumUseCount=Maximum Use Count
 entity.promotionCode.promotionCode=Promotion Code
 entity.promotionCode.promotionCode_validateUnique=This promotion code is already in use.
 entity.promotionCode.startDateTime=Start Date
